[project]
name = "llm-tools-mcp"
version = "0.1"
description = "MCP tools support"
readme = "README.md"
authors = [{ name = "Andrew Wason" }]
license = "Apache-2.0"
classifiers = []
requires-python = ">=3.11"
dependencies = ["llm>=0.26", "mcp>=1.9.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["llm-echo>=0.3a3", "pytest>=8.3.5", "ruff>=0.11.12"]

[project.urls]
Homepage = "https://github.com/rectalogic/llm-tools-mcp"
Changelog = "https://github.com/rectalogic/llm-tools-mcp/releases"
Issues = "https://github.com/rectalogic/llm-tools-mcp/issues"
CI = "https://github.com/rectalogic/llm-tools-mcp/actions"

[project.entry-points.llm]
llm_tools_mcp = "llm_tools_mcp"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pyupgrade
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "INP001"]
